fix doc to left % -- jpanelmenu can only make relative shifts to left spec'd items

--- a/v4/sass/_page.scss
+++ b/v4/sass/_page.scss
@@ -292,7 +292,8 @@ td, th {
 .toc-link {
   position: fixed;
   top: 0px;
-  right: 0px;
+  left: 80%;
+  width: 20%;
   font-family: $sourcesans-light;
 
 }
